# claude-tasks

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  renovate.json  setup.cfg
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
commands/: tasks-board.md  tasks-init.md  tasks-next.md
docs/: design.md
scripts/: _compat.py  _concurrency.py  _paths.py  add_task.py  build_board.py  config.py  git_sync.py  init_queue.py  prioritise.py  raw_capture.py  transition.py
skills/action-task/: SKILL.md
skills/enrich/: SKILL.md
skills/handoff/: SKILL.md
skills/prioritise/: SKILL.md
skills/queue-task/: SKILL.md
skills/raw-capture/: SKILL.md
skills/recap/: SKILL.md
tests/: conftest.py  test_build_board.py  test_compat.py  test_concurrency.py  test_config.py  test_git_sync.py  test_init_queue.py  test_packaging.py  test_paths.py  test_prioritise.py  test_transition.py  test_v1_scripts.py
