[project]
name = "claude-tasks"
version = "0.1.0"
description = "A git-backed task queue Claude can capture into, structure, see, execute, and hand off."
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4", "mypy>=1.10", "mutmut<3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Coverage is run explicitly (CI + the `cov` make-style step), NOT wired into addopts,
# so the mutation runner's per-mutant test executions stay fast.

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# E501: a few scripts embed long HTML/CSS strings — not worth hard-wrapping.
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
# scripts/ is a flat collection of CLI modules sharing top-level names, not a package.
mypy_path = "scripts"
explicit_package_bases = true

[tool.coverage.run]
source = ["scripts"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover"]
fail_under = 100
